# instrata

./: DEVELOPER.md  README.md  index.html  package-lock.json  package.json  screenshot-overlay.html  tsconfig.app.json  typed-i18n.d.ts  typed-router.d.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: build+release.yml  deploy-docs.yml
docs/: package-lock.json  package.json  tsconfig.json
docs/.vitepress/config/: en.ts  index.ts  shared.ts
docs/en/: .in-work.md  index.md
docs/en/guide/: features.md  installation.md  introduction.md  templates.md  troubleshooting.md  usage.md
docs/public/: robots.txt
scripts/: generate-updater.cjs  update-tauri-version.cjs  vite-plugin-yaml-dts.ts
src/: App.vue  AppWrapper.vue  forward-console.ts  i18n.ts  index.css  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  screenshot-overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: capture_monitor.rs  capture_region.rs  capture_window.rs  export_guide.rs  export_markdown.rs  export_pdf.rs  import_guide.rs  link_external_guide.rs  list_windows.rs  mod.rs  runtime_info.rs  screencap.rs  templates.rs  utils.rs
src-tauri/templates/default/: metadata.json  template.md.j2  template.typ.j2
src-tauri/templates/markdown/: metadata.json  template.md.j2
src-tauri/templates/typst/: metadata.json  template.typ.j2
src/api/: commands.ts
src/api/commands/: index.ts
src/api/storage/: guides.ts  templates.ts
src/components/app/: InsertNodeHiddenFlexMenu.vue  InsertNodeIconWheel.vue  app-context.ts
src/components/app/controls/: ExportToMarkdownButton.vue  ExportToPdfButton.vue  TakeScreenshotButton.vue  index.ts
src/components/app/export-dialog/: ExportDialog.vue  ExportDialogCustomContent.vue  ExportDialogInnerMarkdown.vue  ExportDialogInnerPdf.vue  ExportDialogTemplateSelect.vue  index.ts
src/components/app/node-actions/: NodeActions.vue  NodeDeleteAction.vue  NodeMoveActions.vue  index.ts
src/components/app/nodes/: AutoNode.vue  ImageNode.vue  TextNode.vue
src/components/app/text-editor/: TextEditor.vue
src/components/icons/: IconInstrata.vue  IconMarkdown.vue  IconPdfFile.vue  index.ts
src/components/pages/home/: GuideCard.vue  HomeActions.vue  HomeDisplayControls.vue  HomeEmpty.vue  HomeHeader.vue  HomeImportGuidesDropzoneOverlay.vue  context.ts  index.ts
src/components/pages/settings/: SettingsDialog.vue  index.ts
src/components/screenshot/: Screenshot.vue  index.ts
src/components/text-editor/: TextEditor.vue
src/components/ui/button/: index.ts
src/components/ui/dialog/: DialogContent.vue
src/components/ui/empty/: EmptyDescription.vue  EmptyTitle.vue
src/components/ui/item/: index.ts
src/components/ui2/expandable-icon-menu/: ExpandableIconMenuAction.vue  ExpandableIconMenuContent.vue  ExpandableIconMenuRoot.vue  ExpandableIconMenuTrigger.vue  (+1 more)
src/composables/: useAppSettings.ts  useDropEvent.ts  useDropZone.ts  useGlobalShortcut.ts  useImportHelper.ts  useScreenshotOverlay.ts  useUpdaterToasts.ts
src/composables/app/: useScreenshotManager.ts
src/composables/storage/: useGuideIds.ts  useTemplates.ts
src/lib/: async-array.ts  tauri-utils.ts  utils.ts
src/lib/export/: archive.ts  index.ts  markdown.ts  pdf.ts  utils.ts
src/lib/html-conv/: converter.ts  index.ts  utilities.ts
src/lib/tiptap/: index.ts  single-line.ts
src/locales/: de.yaml  en.yaml
src/main/: App.vue  index.ts
src/main/pages/: index.vue
src/pages/: index.vue
src/screenshot-overlay/: App.vue  AppWrapper.vue  Deeper.vue  context.ts  index.ts
src/screenshot-overlay/app/: ContextDependentComposables.vue  FloatingMenu.vue  ModeRegion.vue  ModeWindow.vue  index.ts
src/screenshot-overlay/components/: CropOverlay.vue  index.ts
src/screenshot-overlay/composables/: useAutoDestroy.ts  useEventManager.ts  useHoveredMonitor.ts  useOverlayPositioning.ts
src/screenshot-overlay/lib/: util.ts
src/templates/: index.ts
src/types/: commands.ts  common.ts  data.ts  ipc.ts  storage.ts  templates.ts
(+41 files in other folders)
