[package]
name = "instrata"
version = "0.0.0"
description = "Instrata is a tool for creating step-by-step guides from automatic screenshots."
authors = ["instrata"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "instrata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.7.0"
image = "0.25.6"
tokio = "1.47.1"
tauri-plugin-fs = "2"
tera = "1.20.0"
typst-as-lib = { version = "0.14.4", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.13.1"
tempfile = "3.21.0"
nanoid = "0.4.0"
tauri-plugin-process = "2"
zip = { version = "4.6.1", features = ["deflate"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
