[package]
name = "instrata"
description = "Instrata is a tool for creating step-by-step guides from automatic screenshots."
authors = ["instrata"]
homepage = "https://instrata.github.io"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "instrata_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "thin"
opt-level = "s"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = ["protocol-asset", "tray-icon" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
xcap = "0.7.1"
image = "0.25.9"
tokio = "1.48.0"
tauri-plugin-fs = { version = "2.4.4", features = ["watch"] }
tera = "1.20.1"
typst-as-lib = { version = "0.15.0", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.0"
tempfile = "3.23.0"
nanoid = "0.4.0"
tauri-plugin-process = "2.3.1"
zip = { version = "6.0.0", features = ["deflate"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.1"
